📝 Update Android Development Guide and App Structure
- Enhanced the Android Development Guide with modern wireless development setup instructions and improved clarity on device pairing.
- Updated the app structure by replacing the tab navigation with a simplified water tracking interface, including state management for water intake and sprite health.
- Added AsyncStorage integration for persistent water count storage and improved user feedback with alerts.
- Refined UI components for better user experience, including a new layout for displaying the sprite's state and water intake statistics.